--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
 
     implementation "com.squareup.picasso:picasso:2.71828"
 
-    compile 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
 }
